--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
       margin-bottom: 20px;
     }
 
-    video {
-      width: 100%;
-      border-radius: 18px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-      margin-bottom: 25px;
+ <div style="position:relative;width:100%;padding-top:56.25%;border-radius:18px;overflow:hidden;margin-bottom:22px;">
+  <iframe
+    src="https://www.youtube.com/embed/COLE_AQUI_O_ID"
+    style="position:absolute;top:0;left:0;width:100%;height:100%;border:0;"
+    allowfullscreen
+    loading="lazy">
+  </iframe>
+</div>
+
     }
 
     .mensagem {
